--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 Flask-Talisman
 Flask-CORS
+pymongo[srv]
+Flask-PyMongo
 
 # Runtime dependencies
 gunicorn==20.1.0
